# Coms336

gpu_thread/: image.ppm  makefile
gpu_thread/include/: camera.h
gpu_thread/include/gpu/: gpu_structures.h
gpu_thread/make/: output
gpu_thread/shaders/: raytracer.comp
gpu_thread/src/: main.cc
multi_thread/: CMakeLists.txt  image (Copy).ppm  image.ppm  raytracer  saved.ppm
multi_thread/include/: camera.h
multi_thread/make/: output
multi_thread/src/: main.cc  pi.cc
